# polyflow_robot_69435f6c59fabdb5a0647500

./: README.md  config.alloy  configuration.nix  flake.nix
libs/polyflow/odrive_s1/: node.launch.py
modules/: hardware.nix  packages.nix  services.nix  system-basics.nix  users.nix
overlays/: polyflow-waveshare-can-fd-hat-mode-a.dts
robot-api/: pyproject.toml  setup.cfg
robot-api/robot_api/: __init__.py  auth.md  main.py  models.py  tasks.py
robot-console/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
robot-console/src/: App.tsx  config.ts  main.tsx  styles.scss
robot-console/src/components/Logo/: index.tsx
robot-console/src/pages/Connection/: connection.scss  index.tsx
robot-console/src/pages/General/: general.scss  index.tsx
robot-console/src/pages/Logs/: index.tsx  logs.scss
robot-console/src/types/: page.ts  utils.ts
scripts/: polyflow-rebuild.sh  webrtc-launch.sh  wifi-mode.sh  workspace-launch.sh
