[project]
name = "robot-api"
version = "0.1.0"
description = "Robot REST API"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "psutil",
  "websockets",
]

[project.scripts]
robot-api = "robot_api.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
